--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
         "npm": ">=6"
     },
     "dependencies": {
+        "@devexpress/dx-react-chart": "^3.0.5",
+        "@devexpress/dx-react-chart-material-ui": "^3.0.5",
+        "@devexpress/dx-react-core": "^3.0.5",
         "@emotion/cache": "11.7.1",
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
+        "@material-ui/core": "^4.12.4",
         "@mui/icons-material": "5.8.2",
         "@mui/material": "5.8.2",
         "@mui/styled-engine": "5.8.0",
@@ -28,11 +32,11 @@
         "@testing-library/react": "13.3.0",
         "@testing-library/user-event": "14.2.0",
         "axios": "^0.27.2",
-        "chart.js": "3.4.1",
+        "chart.js": "^3.4.1",
         "chroma-js": "2.4.2",
         "prop-types": "15.8.1",
         "react": ">=16.8.0",
-        "react-chartjs-2": "3.0.4",
+        "react-chartjs-2": "^3.0.4",
         "react-countup": "6.2.0",
         "react-dom": ">=16.8.0",
         "react-github-btn": "1.3.0",
