--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
         "react-perfect-scrollbar": "1.5.8",
         "react-router-dom": "6.3.0",
         "react-scripts": "5.0.1",
+        "serve": "^14.0.1",
         "stylis": "4.1.1",
         "stylis-plugin-rtl": "2.1.1",
         "swiper": "^6.0.2",
         "web-vitals": "2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "serve -s build",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
